--- a/src/widgets/AccountsManager/components/AccountsManagerDropdown/AccountsManagerDropdown.scss
+++ b/src/widgets/AccountsManager/components/AccountsManagerDropdown/AccountsManagerDropdown.scss
@@ -27,11 +27,11 @@
     .wallet-content {
       display: flex;
       flex-direction: column;
-      row-gap: 4px;
+      row-gap: calc(var(--prop-gap) / 4);
       width: 100%;
       .wallet-link {
         display: flex;
-        column-gap: 4px;
+        column-gap: calc(var(--prop-gap) / 4);
         align-items: center;
       }
     }
